--- a/index.html
+++ b/index.html
@@ -3,77 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Works Paint and Collision offers expert auto paint and collision repair services in Oklahoma City. Get a free quote today!">
     <title>The Works Paint and Collision</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" type="image/png" href="https://via.placeholder.com/32?text=WP">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Poppins', sans-serif;
+            background-color: #f8fafc;
         }
         .review-hidden {
             display: none;
         }
         .star-filled::before {
             content: '★';
-            color: #FFD700;
+            color: #facc15;
+        }
+        .animate-slide-up {
+            animation: slideUp 0.5s ease-out;
+        }
+        @keyframes slideUp {
+            from { transform: translateY(20px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+        .hover-scale:hover {
+            transform: scale(1.05);
+            transition: transform 0.3s ease;
+        }
+        .section-divider {
+            border-top: 1px solid #e2e8f0;
         }
     </style>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="text-gray-800 antialiased">
     <!-- Header -->
-    <header class="bg-blue-900 text-white py-4">
+    <header class="bg-gradient-to-r from-blue-900 to-blue-700 text-white py-6 shadow-lg">
         <div class="container mx-auto px-4 flex justify-between items-center">
-            <h1 class="text-2xl font-bold">The Works Paint and Collision</h1>
-            <a href="tel:+14056583725" class="text-lg hover:underline">+1 (405) 658-3725</a>
+            <div class="flex items-center space-x-4">
+                <img src="https://via.placeholder.com/40?text=WP" alt="Logo" class="h-10">
+                <h1 class="text-3xl font-bold tracking-tight">The Works Paint and Collision</h1>
+            </div>
+            <div class="flex items-center space-x-6">
+                <a href="tel:+14056583725" class="text-lg hover:text-yellow-300 transition-colors"><i class="fas fa-phone mr-2"></i>+1 (405) 658-3725</a>
+                <a href="#contact" class="bg-yellow-500 text-blue-900 px-4 py-2 rounded-lg font-semibold hover:bg-yellow-400 transition-colors">Get a Quote</a>
+            </div>
         </div>
     </header>
 
     <!-- Hero Section -->
-    <section class="bg-blue-800 text-white py-12">
-        <div class="container mx-auto px-4 text-center">
-            <h2 class="text-4xl font-bold mb-4">Expert Paint and Collision Repair</h2>
-            <p class="text-lg mb-6">Owned by David, The Works Paint and Collision provides top-quality auto repair services in Oklahoma City.</p>
-            <a href="#contact" class="bg-yellow-500 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-400">Get a Quote</a>
+    <section class="bg-blue-800 text-white py-16 relative overflow-hidden">
+        <div class="absolute inset-0 bg-[url('https://via.placeholder.com/1920x600?text=Hero+Image')] bg-cover bg-center opacity-20"></div>
+        <div class="container mx-auto px-4 text-center relative z-10">
+            <h2 class="text-4xl md:text-5xl font-bold mb-4 animate-slide-up">Expert Paint and Collision Repair</h2>
+            <p class="text-lg md:text-xl mb-8 max-w-2xl mx-auto animate-slide-up">Owned by David, The Works Paint and Collision delivers top-quality auto repair services in Oklahoma City with unmatched craftsmanship.</p>
+            <a href="#contact" class="bg-yellow-500 text-blue-900 px-8 py-3 rounded-lg font-semibold hover:bg-yellow-400 transition-colors hover-scale animate-slide-up">Request a Free Quote</a>
         </div>
     </section>
 
     <!-- About Section -->
-    <section id="about" class="py-12">
+    <section id="about" class="py-16 section-divider">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-8">About Us</h2>
-            <p class="text-lg text-center max-w-3xl mx-auto">
-                At The Works Paint and Collision, we specialize in restoring your vehicle to its original condition. With years of experience and a commitment to excellence, owner David and our skilled team deliver unmatched craftsmanship for all your paint and collision repair needs.
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 animate-slide-up">About Us</h2>
+            <p class="text-lg text-center max-w-3xl mx-auto leading-relaxed">
+                At The Works Paint and Collision, we are dedicated to restoring your vehicle to its pristine condition. With years of experience, owner David and our expert team provide exceptional paint and collision repair services, ensuring every job meets the highest standards of quality and care.
             </p>
         </div>
     </section>
 
     <!-- Google Maps Section -->
-    <section id="location" class="py-12 bg-white">
+    <section id="location" class="py-16 bg-white section-divider">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-8">Visit Us</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 animate-slide-up">Visit Our Shop</h2>
             <div class="flex flex-col md:flex-row gap-8">
-                <div class="md:w-1/2">
+                <div class="md:w-1/2 hover-scale transition-transform">
                     <iframe 
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.297627073837!2d-97.6230727!3d35.5090943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87b211a821b331ab%3A0xe492c826e0593daa!2sThe%20Works%20Paint%20and%20Collision!5e0!3m2!1sen!2sus!4v1697841234567" 
                         width="100%" 
                         height="400" 
-                        style="border:0;" 
+                        style="border:0; border-radius: 8px;" 
                         allowfullscreen="" 
                         loading="lazy" 
                         referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
                 <div class="md:w-1/2">
-                    <h3 class="text-2xl font-semibold mb-4">Our Location</h3>
-                    <p class="text-lg">5925 NW 37th St Suite C, Oklahoma City, OK 73122</p>
-                    <h3 class="text-2xl font-semibold mt-6 mb-4">Hours</h3>
-                    <ul class="text-lg">
-                        <li>Monday: 8 AM–5 PM</li>
-                        <li>Tuesday: 8 AM–5 PM</li>
-                        <li>Wednesday: 8 AM–5 PM</li>
-                        <li>Thursday: 8 AM–5 PM</li>
-                        <li>Friday: 8 AM–5 PM</li>
-                        <li>Saturday: Closed</li>
-                        <li>Sunday: Closed</li>
+                    <h3 class="text-2xl font-semibold mb-4 animate-slide-up">Our Location</h3>
+                    <p class="text-lg mb-6">5925 NW 37th St Suite C, Oklahoma City, OK 73122</p>
+                    <h3 class="text-2xl font-semibold mb-4 animate-slide-up">Business Hours</h3>
+                    <ul class="text-lg space-y-2">
+                        <li><i class="fas fa-clock mr-2 text-yellow-500"></i>Monday: 8 AM–5 PM</li>
+                        <li><i class="fas fa-clock mr-2 text-yellow-500"></i>Tuesday: 8 AM–5 PM</li>
+                        <li><i class="fas fa-clock mr-2 text-yellow-500"></i>Wednesday: 8 AM–5 PM</li>
+                        <li><i class="fas fa-clock mr-2 text-yellow-500"></i>Thursday: 8 AM–5 PM</li>
+                        <li><i class="fas fa-clock mr-2 text-yellow-500"></i>Friday: 8 AM–5 PM</li>
+                        <li><i class="fas fa-clock mr-2 text-yellow-500"></i>Saturday: Closed</li>
+                        <li><i class="fas fa-clock mr-2 text-yellow-500"></i>Sunday: Closed</li>
                     </ul>
                 </div>
             </div>
@@ -81,75 +107,90 @@
     </section>
 
     <!-- Reviews Section -->
-    <section id="reviews" class="py-12 bg-gray-100">
+    <section id="reviews" class="py-16 bg-gray-50 section-divider">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-8">Customer Reviews</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 animate-slide-up">What Our Customers Say</h2>
             <div id="reviews-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Reviews will be populated by JavaScript -->
             </div>
             <div class="text-center mt-8">
-                <button id="show-more" class="bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-800">Show More</button>
+                <button id="show-more" class="bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-800 transition-colors">Show More</button>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-12 bg-white">
+    <section id="contact" class="py-16 bg-white section-divider">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-8">Contact Us</h2>
-            <form id="contact-form" class="max-w-lg mx-auto">
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 animate-slide-up">Get in Touch</h2>
+            <div class="max-w-lg mx-auto bg-gray-50 p-8 rounded-lg shadow-lg">
+                <div id="form-message" class="hidden mb-4 p-4 rounded-lg"></div>
                 <div class="mb-4">
                     <label for="name" class="block text-lg font-medium mb-2">Name</label>
-                    <input type="text" id="name" name="name" class="w-full p-3 border rounded-lg" required>
+                    <input type="text" id="name" name="name" class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-yellow-500 focus:border-transparent" required>
                 </div>
                 <div class="mb-4">
                     <label for="email" class="block text-lg font-medium mb-2">Email</label>
-                    <input type="email" id="email" name="email" class="w-full p-3 border rounded-lg" required>
+                    <input type="email" id="email" name="email" class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-yellow-500 focus:border-transparent" required>
+                </div>
+                <div class="mb-4">
+                    <label for="phone" class="block text-lg font-medium mb-2">Phone (Optional)</label>
+                    <input type="tel" id="phone" name="phone" class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-yellow-500 focus:border-transparent">
                 </div>
                 <div class="mb-4">
                     <label for="message" class="block text-lg font-medium mb-2">Message</label>
-                    <textarea id="message" name="message" rows="5" class="w-full p-3 border rounded-lg" required></textarea>
+                    <textarea id="message" name="message" rows="5" class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-yellow-500 focus:border-transparent" required></textarea>
                 </div>
-                <button type="submit" class="bg-yellow-500 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-400">Send Message</button>
-            </form>
-        </div>
-    </section>
+                <button type="submit" class="bg-yellow-500 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-400 transition-colors w-full">Send Message</button>
+            </div>
+        </section>
 
     <!-- Footer -->
-    <footer class="bg-blue-900 text-white py-6">
+    <footer class="bg-gradient-to-r from-blue-900 to-blue-700 text-white py-8">
         <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2025 The Works Paint and Collision. All rights reserved.</p>
-            <p class="mt-2">5925 NW 37th St Suite C, Oklahoma City, OK 73122 | <a href="tel:+14056583725" class="hover:underline">+1 (405) 658-3725</a></p>
+            <div class="flex flex-col md:flex-row justify-between items-center mb-4">
+                <div>
+                    <p class="text-lg">&copy; 2025 The Works Paint and Collision. All rights reserved.</p>
+                    <p class="mt-2">5925 NW 37th St Suite C, Oklahoma City, OK 73122</p>
+                </div>
+                <div class="mt-4 md:mt-0">
+                    <a href="tel:+14056583725" class="text-lg hover:text-yellow-300 transition-colors"><i class="fas fa-phone mr-2"></i>+1 (405) 658-3725</a>
+                </div>
+            </div>
+            <div class="flex justify-center space-x-6">
+                <a href="#" class="hover:text-yellow-300 transition-colors"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="hover:text-yellow-300 transition-colors"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="hover:text-yellow-300 transition-colors"><i class="fab fa-twitter"></i></a>
+            </div>
         </div>
     </footer>
 
     <!-- JavaScript for Reviews and Form Submission -->
     <script>
-        // Square Location ID Placeholder (Replace YOUR_LOCATION_ID with actual Square location ID)
-        const SQUARE_LOCATION_ID = 'YOUR_LOCATION_ID';
-
         // Sample Reviews Data
         const reviews = [
-            { name: "Reviewer 1", rating: 5, body: "" },
-            { name: "Reviewer 2", rating: 5, body: "" },
-            { name: "Reviewer 3", rating: 5, body: "" },
-            { name: "Reviewer 4", rating: 5, body: "" },
-            { name: "Reviewer 5", rating: 5, body: "" }
+            { name: "Sarah M.", rating: 5, body: "David and his team did an amazing job fixing my car's bumper. The paint match was perfect, and it was done faster than I expected!" },
+            { name: "James T.", rating: 4, body: "Great service and friendly staff. My truck looks brand new after their repair work. Highly recommend!" },
+            { name: "Emily R.", rating: 5, body: "The Works Paint and Collision exceeded my expectations. Professional, timely, and top-notch quality!" },
+            { name: "Michael B.", rating: 5, body: "Had a dent repaired and the results were flawless. David is a true expert in his craft!" },
+            { name: "Lisa K.", rating: 4, body: "Very satisfied with the repair work. The process was smooth, and the staff kept me updated throughout." },
+            { name: "Chris D.", rating: 5, body: "Outstanding service! My car looks better than ever, and the pricing was fair." },
+            { name: "Anna P.", rating: 5, body: "The team was professional and the repair was flawless. Will definitely return if I need more work done!" }
         ];
 
         // Display Reviews
         const reviewsContainer = document.getElementById('reviews-container');
         const showMoreButton = document.getElementById('show-more');
-        let visibleReviews = 6;
+        let visibleReviews = 3;
 
         function renderReviews() {
             reviewsContainer.innerHTML = '';
             reviews.slice(0, visibleReviews).forEach(review => {
                 const reviewElement = document.createElement('div');
-                reviewElement.className = 'bg-white p-4 rounded-lg shadow';
+                reviewElement.className = 'bg-white p-6 rounded-lg shadow-lg hover-scale transition-transform animate-slide-up';
                 reviewElement.innerHTML = `
-                    <h3 class="text-lg font-semibold">${review.name}</h3>
-                    <div class="flex">${'<span class="star-filled"></span>'.repeat(review.rating)}</div>
+                    <h3 class="text-lg font-semibold text-blue-900">${review.name}</h3>
+                    <div class="flex mb-2">${'<span class="star-filled"></span>'.repeat(review.rating)}${review.rating < 5 ? '<span class="text-gray-300">★</span>'.repeat(5 - review.rating) : ''}</div>
                     <p class="text-gray-600">${review.body}</p>
                 `;
                 reviewsContainer.appendChild(reviewElement);
@@ -159,25 +200,35 @@
         }
 
         showMoreButton.addEventListener('click', () => {
-            visibleReviews += 6;
+            visibleReviews += 3;
             renderReviews();
         });
 
         renderReviews();
 
-        // Form Submission (Basic Example - Replace with actual email service)
-        document.getElementById('contact-form').addEventListener('submit', async (e) => {
+        // Form Submission
+        const contactForm = document.querySelector('#contact');
+        const formMessage = document.getElementById('form-message');
+
+        contactForm.addEventListener('submit', async (e) => {
             e.preventDefault();
-            const formData = new FormData(e.target);
+            const formData = new FormData(e.target.querySelector('form'));
             const data = Object.fromEntries(formData);
+
             try {
-                // Placeholder for email service (e.g., EmailJS or server-side endpoint)
+                // Placeholder for actual email service (e.g., EmailJS or server-side endpoint)
                 console.log('Form submitted:', data);
-                alert('Message sent successfully!');
-                e.target.reset();
+                formMessage.className = 'mb-4 p-4 rounded-lg bg-green-100 text-green-800';
+                formMessage.textContent = 'Message sent successfully! We’ll get back to you soon.';
+                formMessage.classList.remove('hidden');
+                e.target.querySelector('form').reset();
+                setTimeout(() => formMessage.classList.add('hidden'), 5000);
             } catch (error) {
                 console.error('Error sending message:', error);
-                alert('Error sending message. Please try again.');
+                formMessage.className = 'mb-4 p-4 rounded-lg bg-red-100 text-red-800';
+                formMessage.textContent = 'Error sending message. Please try again later.';
+                formMessage.classList.remove('hidden');
+                setTimeout(() => formMessage.classList.add('hidden'), 5000);
             }
         });
     </script>
