--- a/index.html
+++ b/index.html
@@ -166,14 +166,272 @@
     <script>
         // Sample Reviews Data
         const reviews = [
-            { name: "Sarah M.", rating: 5, body: "David and his team did an amazing job fixing my car's bumper. The paint match was perfect, and it was done faster than I expected!" },
-            { name: "James T.", rating: 4, body: "Great service and friendly staff. My truck looks brand new after their repair work. Highly recommend!" },
-            { name: "Emily R.", rating: 5, body: "The Works Paint and Collision exceeded my expectations. Professional, timely, and top-notch quality!" },
-            { name: "Michael B.", rating: 5, body: "Had a dent repaired and the results were flawless. David is a true expert in his craft!" },
-            { name: "Lisa K.", rating: 4, body: "Very satisfied with the repair work. The process was smooth, and the staff kept me updated throughout." },
-            { name: "Chris D.", rating: 5, body: "Outstanding service! My car looks better than ever, and the pricing was fair." },
-            { name: "Anna P.", rating: 5, body: "The team was professional and the repair was flawless. Will definitely return if I need more work done!" }
-        ];
+    {
+        "name": "Jenn Sillings",
+        "rating": 5,
+        "body": "Excellent service! The team always has gone above and beyond to provide excellence. I appreciate everything they have done for me and my vehicle repairs. The work is top quality and rates have been incredibly reasonable. Highly recommend! On this particular repair they made my front bumper look as good as new! +2"
+    },
+    {
+        "name": "Raymond Haynes",
+        "rating": 5,
+        "body": "Couldn't be more pleased with the work done. I was struggling to find a good body shop ( mainly because im picky ) when a friend recommended The Works Paint and Collision after they used them and thier vehicle looked great. I was worried as my vehicle is silver/metallic but they did an amazing job and I could not tell any body work had been done. Everything was blended perfectly. Services Body & Trim Price assessment Great price"
+    },
+    {
+        "name": "Jack Gardenhire The Oklahoma Realtor",
+        "rating": 5,
+        "body": "They did an amazing job painting my new hood and blending in the fenders to make it look perfect. I would highly recommend them. And they answered the phone and kept contact through out the process that only took a few days"
+    },
+    {
+        "name": "LowSlow Ef",
+        "rating": 5,
+        "body": "The whole crew did an amazing job with the car. We ran into some issues with the insurance and they took care of it for me . The detail of the inside and outside of the car was the cherry on top !"
+    },
+    {
+        "name": "Shayla Ogles",
+        "rating": 5,
+        "body": "This place got my car in and out within days ! Quick fast and easy to work with and my car looks great, I hit a deeer they waisted no time to make sure my vehicle was ready and put back together for my safety! I will come here for any bodywork i may need in the future!! Thank you guys so much !! — Veronica & Shayla"
+    },
+    {
+        "name": "David Castro",
+        "rating": 5,
+        "body": "The Works Paint and Collision brought the Expedition back to life! Really satisfied with he quality of work David and his crew did. Not to mention how easy they made it for us. Definitely recommended for any paint and body work. More +2"
+    },
+    {
+        "name": "Anita Nail",
+        "rating": 5,
+        "body": "Excellent service and quality of work. My pickup was spotless (inside and out) when I picked it up. I can't begin to brag on their work enough. We will never use another body shop for our repairs. They came highly recommended by a friend … More"
+    },
+    {
+        "name": "Oscar Sirin",
+        "rating": 5,
+        "body": "went to drop off my car at the works & they did a phenomenal job!! 100% recommend taking your car to get fixed here, i’m very satisfied and happy with how the repairs went."
+    },
+    {
+        "name": "Rosario Zamarron",
+        "rating": 5,
+        "body": "On a particularly icy morning, my car was involved in a collision that caused significant damage to the left side of the vehicle, including the door, paint, alignment, and rims. However, the repair team did an excellent job of restoring my … More"
+    },
+    {
+        "name": "Ryan Doom",
+        "rating": 5,
+        "body": "Just got my truck back the The Works Paint and Collision and they knocked it out of the park. The quality of work they produce is like no other. They went above and beyond on dealing with my insurance and getting my truck back on the road. HIGHLY RECOMMEND these guys. 💯 … More"
+    },
+    {
+        "name": "Dennis Griggs",
+        "rating": 5,
+        "body": "This place was awesome they did an excellent job on my truck. Highly recommend them very professional, and Outstanding work"
+    },
+    {
+        "name": "Dayna Walls",
+        "rating": 5,
+        "body": "Someone had backed into me . Passenger side above the tire. The way it was I was kind of wondering how it would end up. Picked up my truck today and I couldn’t be any happier. They did such a great job. It’s literally flawless. I would … More"
+    },
+    {
+        "name": "Kyle Compton",
+        "rating": 5,
+        "body": "The Works paint and collision did a fantastic job on my daughters rear bumper. Great customer service and was done in a timely matter."
+    },
+    {
+        "name": "Juan Dos",
+        "rating": 5,
+        "body": "I had a fantastic experience here when they repaired my bumper. The situation was tricky because my insurance company was being difficult and trying to cut corners, but the team here handled everything like pros. They fought for me to … More"
+    },
+    {
+        "name": "Brandy Rasbury",
+        "rating": 5,
+        "body": "I recently had my vehicle repaired here after an accident, and I couldn’t be more satisfied with the service I received. From start to finish, the team was incredibly fast, efficient, and clear about what to expect. They kept me informed … More"
+    },
+    {
+        "name": "Tyrece Mitchell",
+        "rating": 5,
+        "body": "Great fast work! Made my car look brand new! Services Body & Trim… More"
+    },
+    {
+        "name": "Brett Payne",
+        "rating": 5,
+        "body": "Amanda and her team were fantastic! I was always able to get a hold of them. They were exactly on the timeline that they had laid out at the beginning. Price actually came in under the original estimate. Work was fantastic. Give them a call."
+    },
+    {
+        "name": "Armando Escobar",
+        "rating": 5,
+        "body": "The work these guys do is out of this world, they painted my front and rear bumper. Had a specialty color and they had no problem getting it for me. I was amazed with the finished results. I highly recommend this place to anyone that wants their car to look beautiful again"
+    },
+    {
+        "name": "Carol Hamilton",
+        "rating": 5,
+        "body": "Exceptionally fast and helpful service. My back right tail light was busted out. They fixed it quickly but unfortunately replaced it with a ‘different option light’ so it didn’t match the other side. They quickly reordered the correct one and made it right! Would recommend them to anyone. More"
+    },
+    {
+        "name": "Chris",
+        "rating": 5,
+        "body": "This is the way all repairs companies should do business! The staff is the kindest and most sincere people I've ever encountered and the quality of work is the very foundation what you should expect from anyone you trust with your car care needs absolutely impressed through and through!!"
+    },
+    {
+        "name": "Gaby",
+        "rating": 5,
+        "body": "Great customer service they’re very attentive and helpful. I especially loved the work they did on my car!!"
+    },
+    {
+        "name": "Shelly Smith",
+        "rating": 5,
+        "body": "I highly recommend The works Paint and collision if you want your car to look and ride like it did before your accident. They are an amazing group of individuals who will go above and beyond to make sure you are pleased with the final result!!!"
+    },
+    {
+        "name": "Jefferson Deleon",
+        "rating": 5,
+        "body": "David was very easy to talk to and tried his best to stick as close to the estimate as possible and was still over 1000 bucks less than estimates I got at other places, Great deal, great service and outstanding results, didn't expect for my car to look brand new again."
+    },
+    {
+        "name": "Vintage",
+        "rating": 5,
+        "body": "Miguel did incredible work, and extremely professional, I would recommend anyone with any vehicle to them."
+    },
+    {
+        "name": "Michael H",
+        "rating": 5,
+        "body": "David was amazing, professional and very knowledgeable! 10/10 recommendation"
+    },
+    {
+        "name": "Lucrecia De Loera",
+        "rating": 5,
+        "body": "Very professional and detailed job and everyone was so kind and polite the paint work was excellent in may honda crv i highly recommend it More"
+    },
+    {
+        "name": "Anthony Vargas",
+        "rating": 5,
+        "body": "Incredible work and the best staff. They hook you up and my car is better after the wreck than before!"
+    },
+    {
+        "name": "Jennifer Gilley",
+        "rating": 5,
+        "body": "Got us a quote very quickly and did steller craftsmanship. Easy to get a hold of and very attentive. I'd recommend this company to anyone! More"
+    },
+    {
+        "name": "John Woodcock",
+        "rating": 5,
+        "body": "Amazing work guys and gal! Will be bringing all my business to these guys! Made the experience not so bad when dealing with insurance!!!!"
+    },
+    {
+        "name": "Janenne Johnston",
+        "rating": 5,
+        "body": "This is the AƁSOLUTE BEST shop I've ever had pleasure of dealing with! Staff were just wonderful and can't recommend them enough! Janenne Johnston"
+    },
+    {
+        "name": "myia avila",
+        "rating": 5,
+        "body": "They did amazing work on my car highly recommend!"
+    },
+    {
+        "name": "David DeLeon",
+        "rating": 5,
+        "body": "Good quality work, miguel took care of me perfectly on painting a car for me!"
+    },
+    {
+        "name": "Marco Deloera",
+        "rating": 5,
+        "body": "Had a bumper replacement an it came out great, especially the paint job on it!!"
+    },
+    {
+        "name": "Steven Gillispie",
+        "rating": 5,
+        "body": "superb job very helpful with process great work. very friendly establish company."
+    },
+    {
+        "name": "Darryl May",
+        "rating": 5,
+        "body": "Great place have used them several times and they never disappoint!"
+    },
+    {
+        "name": "Miguel Avila",
+        "rating": 5,
+        "body": "amazing work highly recommend especially there paint work Services Paint… More"
+    },
+    {
+        "name": "Darren Christenson",
+        "rating": 5,
+        "body": "Best in town. I will only use them for everything I need. Services Body … More"
+    },
+    {
+        "name": "ARMANDO AVILA",
+        "rating": 5,
+        "body": "The paint jobs I’ve seen around town"
+    },
+    {
+        "name": "Evelyn De Loera",
+        "rating": 5,
+        "body": "Amazing job 10/10 recommend!!"
+    },
+    {
+        "name": "Nelly Rodriguez",
+        "rating": 5,
+        "body": "Very good service, totally recommended!!"
+    },
+    {
+        "name": "Jacobi",
+        "rating": 5,
+        "body": "Services Steering & suspension repair"
+    },
+    {
+        "name": "Seth Cleland",
+        "rating": 5,
+        "body": "Positive Punctuality, Quality, Professionalism… More"
+    },
+    {
+        "name": "Oscar P",
+        "rating": 5,
+        "body": "Positive Punctuality, Quality, Professionalism, Value… More"
+    },
+    {
+        "name": "Cristian Diaz",
+        "rating": 5,
+        "body": "Positive Punctuality, Quality, Professionalism, Value… More"
+    },
+    {
+        "name": "Jose Hernandez",
+        "rating": 5,
+        "body": "Positive Punctuality, Quality, Professionalism, Value… More"
+    },
+    {
+        "name": "Leandra Lopez",
+        "rating": 5,
+        "body": "Positive Punctuality, Quality, Professionalism"
+    },
+    {
+        "name": "diana muñoz",
+        "rating": 5,
+        "body": "Positive Punctuality, Quality, Professionalism, Value"
+    },
+    {
+        "name": "Cruz Avila",
+        "rating": 5,
+        "body": ""
+    },
+    {
+        "name": "JAYcee Perez",
+        "rating": 5,
+        "body": ""
+    },
+    {
+        "name": "michael kight",
+        "rating": 5,
+        "body": ""
+    },
+    {
+        "name": "Maritza Murray",
+        "rating": 1,
+        "body": "I wouldn’t not recommend. I came here based on the reviews and that it was near my work. And one of my friends had their Ram worked on. It was good so I thought yeah I go to them. I got my car and it looked nice from far away. The up close … More +2"
+    },
+    {
+        "name": "Rogueelite",
+        "rating": 1,
+        "body": "I had them repair minor damage to the front of my car after a collision that was my fault. I told them up front I was paying cash and that seemed ok. However, over the course of the repairs it became clear they were unhappy that I didn't … More"
+    },
+    {
+        "name": "Elvis a Martinez",
+        "rating": 1,
+        "body": ""
+    }
+];
 
         // Display Reviews
         const reviewsContainer = document.getElementById('reviews-container');
